website/websites/u64q/code/revcomp.3.python.log

Fri, 13 Feb 2015 12:28:48 GMT

COMMAND LINE:
/usr/bin/python2 revcomp.python-3.python 0 < revcomp-input1000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "revcomp.python-3.python", line 25
    print(line, end='')
                   ^
SyntaxError: invalid syntax
